Внесение правок после проверки наставником

--- a/form.html
+++ b/form.html
@@ -87,22 +87,22 @@
         </div>
         <div class="form__personal">
           <p class="form__type-item">Фио</p>
-          <label class="form__label" for="form__first-name">Имя:
-            <input id="form__first-name" type="input" placeholder="Введите ваше имя*">
+          <label class="form__label">Имя:
+            <input type="input" placeholder="Введите ваше имя*">
           </label>
-          <label class="form__label" for="form__surname-name">Фамилия:
-            <input id="form__surname-name" type="input" placeholder="Укажите фамилию*">
+          <label class="form__label">Фамилия:
+            <input type="input" placeholder="Укажите фамилию*">
           </label>
-          <label class="form__label" for="form__patronymic">Отчество:
-            <input id="form__patronymic" type="input" placeholder="Отчество, если желаете">
+          <label class="form__label">Отчество:
+            <input type="input" placeholder="Отчество, если желаете">
           </label>
-          <label class="form__label" for="form__phone">
+          <label class="form__label">
             <p class="form__type-item">Тел</p>
-            <input id="form__phone" type="tel" name="usrtel" placeholder="+7 XXX XX XX*">
+            <input type="tel" name="usrtel" placeholder="+7 XXX XX XX*">
           </label>
-          <label class="form__label" for="form__email">
+          <label class="form__label">
             <p class="form__type-item">E-mail</p>
-            <input id="form__email" type="email" name="usremail" placeholder="Ваш E-mail*">
+            <input type="email" name="usremail" placeholder="Ваш E-mail*">
           </label>
           <label class="form__label">
             <p class="form__type-item">Доп</p>
