--- a/index.html
+++ b/index.html
@@ -31,18 +31,21 @@
       </ul>
     </nav>
     <header class="main-header">
-      <h1 class="main-header__title">Милые штуки<br>ручной<br>работы для дома</h1>
+      <h1 class="main-header__title">
+        <span class="main-header__title-span">Милые штуки</span>
+        <span class="main-header__title-span">ручной</span>
+        <span class="main-header__title-span">работы для дома</span>
+      </h1>
       <ul class="main-header__list">
-        <li class="main-header__item"><a class="main-header__link" href="#">Предметы<br>интерьера</a></li>
-        <li class="main-header__item"><a class="main-header__link" href="#">Детские<br>игрушки</a></li>
+        <li class="main-header__item"><a class="main-header__link" href="#">Предметы интерьера</a></li>
+        <li class="main-header__item"><a class="main-header__link" href="#">Детские игрушки</a></li>
       </ul>
     </header>
     <section class="featured">
-      <h2 class="featured__title">Вязанные корзинки<br>
+      <h2 class="featured__title">Вязанные корзинки
         <span class="featured__span">товар недели</span>
       </h2>
-      <p class="featured__text">Экологически чистая пряжа,<br>
-      ручная работа. Доступны в шести расцветках, и трех размерах</p>
+      <p class="featured__text">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах</p>
       <table class="featured__table">
         <tr class="featured__row">
           <td class="featured__col">Цвет:</td>
@@ -115,7 +118,7 @@
             <p class="contacts__email">e-mail:</p>
           </td>
           <td class="contacts__col">
-            <p class="contacts__col-p">
+            <p class="contacts__email-wrapper">
               <a class="contacts__email-link" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
             </p>
           </td>
@@ -125,7 +128,7 @@
             <p class="contacts__address">адрес:</p>
           </td>
           <td class="contacts__col">
-            <p class="contacts__col-p">г. Санкт-Петербург,<br>ул. Большая Конюшеная,<br>д.19/8,офис 101</p>
+            <p class="contacts__email-wrapper">г. Санкт-Петербург, ул. Большая Конюшеная, д.19/8,офис 101</p>
           </td>
         </tr>
       </table>
