Внесение правок после проверки наставником, убрал глобальные стили

--- a/form.html
+++ b/form.html
@@ -88,21 +88,21 @@
         <div class="form__personal">
           <p class="form__type-item">Фио</p>
           <label class="form__label">Имя:
-            <input type="input" placeholder="Введите ваше имя*">
+            <input class="form__input" type="input" placeholder="Введите ваше имя*">
           </label>
           <label class="form__label">Фамилия:
-            <input type="input" placeholder="Укажите фамилию*">
+            <input class="form__input" type="input" placeholder="Укажите фамилию*">
           </label>
           <label class="form__label">Отчество:
-            <input type="input" placeholder="Отчество, если желаете">
+            <input class="form__input" type="input" placeholder="Отчество, если желаете">
           </label>
           <label class="form__label">
             <p class="form__type-item">Тел</p>
-            <input type="tel" name="usrtel" placeholder="+7 XXX XX XX*">
+            <input class="form__input" type="tel" name="usrtel" placeholder="+7 XXX XX XX*">
           </label>
           <label class="form__label">
             <p class="form__type-item">E-mail</p>
-            <input type="email" name="usremail" placeholder="Ваш E-mail*">
+            <input class="form__input" type="email" name="usremail" placeholder="Ваш E-mail*">
           </label>
           <label class="form__label">
             <p class="form__type-item">Доп</p>
