Сверстал index.html для планшета

--- a/source/form.html
+++ b/source/form.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Form</title>
   <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic" rel="stylesheet"> -->
-  <link rel="stylesheet" href="source/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="site-wrapper">
@@ -12,7 +12,7 @@
       <ul class="top-menu__list">
         <li class="top-menu__item">
           <a class="top-menu__link">
-            <img class="top-menu__logo-image" src="source/img/logo-mobile.svg" width="86" height="35" alt="Лого">
+            <img class="top-menu__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Лого">
           </a>
           <button class="top-menu__toggle-menu">X</button>
         </li>
@@ -117,19 +117,19 @@
       <ul class="main-footer__list">
         <li class="main-footer__item">
           <a class="main-footer__item-link href="#">
-            <img src="source/img/icon-insta.svg" alt="Instagramm">
+            <img src="img/icon-insta.svg" alt="Instagramm">
           </a>
           <a class="main-footer__item-link href="#">
-            <img src="source/img/icon-fb.svg" alt="Facebook">
+            <img src="img/icon-fb.svg" alt="Facebook">
           </a>
           <a class="main-footer__item-link href="#">
-            <img src="source/img/icon-twitter.svg" alt="Twitter">
+            <img src="img/icon-twitter.svg" alt="Twitter">
           </a>
         </li>
         <li class="main-footer__item">
           <p class="main-footer__copyright">
             <a href="#" class="main-footer__link"><span>Разработано</span>
-              <img class="main-footer__img" src="source/img/htmlacademy.svg" alt="Academy link" width="38" height="38">
+              <img class="main-footer__img" src="img/htmlacademy.svg" alt="Academy link" width="38" height="38">
             </a>
           </p>
         </li>
