--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Каталог товаров</title>
   <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic" rel="stylesheet"> -->
-  <link rel="stylesheet" href="source/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="site-wrapper">
@@ -12,7 +12,7 @@
       <ul class="top-menu__list">
         <li class="top-menu__item">
           <a class="top-menu__link">
-            <img class="top-menu__logo-image" src="source/img/logo-mobile.svg" width="86" height="35" alt="Лого">
+            <img class="top-menu__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Лого">
           </a>
           <button class="top-menu__toggle-menu">X</button>
         </li>
@@ -35,7 +35,7 @@
     </header>
     <section class="catalog">
       <article class="catalog__item">
-        <img class="catalog__image" src="source/img/photo-hare-mobile@1x.jpg" width="260" height="195" alt="Картинка товара">
+        <img class="catalog__image" src="img/photo-hare-mobile@1x.jpg" width="260" height="195" alt="Картинка товара">
         <div class="catalog-wrapper">
           <h3 class="catalog__title">Зайчик-попрыгайчик</h3>
           <p class="catalog__description">Рост 30 см, вес 200 гр.</p>
@@ -43,7 +43,7 @@
         </div>
       </article>
       <article class="catalog__item">
-        <img class="catalog__image" src="source/img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Картинка товара">
+        <img class="catalog__image" src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Картинка товара">
           <div class="catalog-wrapper">
           <h3 class="catalog__title">Корзинка для белья</h3>
           <p class="catalog__description">Диаметр 15 см, высота 10 см</p>
@@ -51,7 +51,7 @@
         </div>
       </article>
       <article class="catalog__item">
-        <img class="catalog__image" src="source/img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Картинка товара">
+        <img class="catalog__image" src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Картинка товара">
         <div class="catalog-wrapper">
           <h3 class="catalog__title">Большая корзина<br>для игрушек</h3>
           <p class="catalog__description">Диаметр 30 см, высота 30 см</p>
@@ -63,8 +63,8 @@
           <h3 class="catalog__title">Процесс производства</h3>
         </div>
         <div class="catalog__movie">
-          <img class="catalog__image" src="source/img/video-mobile@1x.jpg" width="260" height="150" alt="Видео создания шедевров">
-          <img class="catalog__image-play" src="source/img/icon-play.svg" width="100" height="76" alt="Видео создания шедевров">
+          <img class="catalog__image" src="img/video-mobile@1x.jpg" width="260" height="150" alt="Видео создания шедевров">
+          <img class="catalog__image-play" src="img/icon-play.svg" width="100" height="76" alt="Видео создания шедевров">
         </div>
         <div class="catalog__description-wrapper">
           <p class="catalog__description">По просьбам наших<br>любимых фолловеров мы<br>сняли для вас подробное<br>видео о том, как появляются<br>наши товары</p>
@@ -78,19 +78,19 @@
       <ul class="main-footer__list">
         <li class="main-footer__item">
           <a class="main-footer__item-link href="#">
-            <img src="source/img/icon-insta.svg" alt="Instagramm">
+            <img src="img/icon-insta.svg" alt="Instagramm">
           </a>
           <a class="main-footer__item-link href="#">
-            <img src="source/img/icon-fb.svg" alt="Facebook">
+            <img src="img/icon-fb.svg" alt="Facebook">
           </a>
           <a class="main-footer__item-link href="#">
-            <img src="source/img/icon-twitter.svg" alt="Twitter">
+            <img src="img/icon-twitter.svg" alt="Twitter">
           </a>
         </li>
         <li class="main-footer__item">
           <p class="main-footer__copyright">
             <a href="#" class="main-footer__link"><span>Разработано</span>
-              <img class="main-footer__img" src="source/img/htmlacademy.svg" alt="Academy link" width="38" height="38">
+              <img class="main-footer__img" src="img/htmlacademy.svg" alt="Academy link" width="38" height="38">
             </a>
           </p>
         </li>
