--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,192 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Мишка</title>
-  </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Профессиональный HTML и CSS</a>», уровень 2.</p>
-
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Главная страница Mishka</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <div class="site-wrapper">
+    <nav class="top-menu">
+      <ul class="top-menu__list">
+        <li class="top-menu__item top-menu--logo">
+          <a class="top-menu__link">
+            <img class="top-menu__logo-image" src="/img/logo-mobile.svg" width="86" height="35" alt="Лого">
+          </a>
+          <button class="top-menu__toggle-menu">X</button>
+        </li>
+        <li class="top-menu__item top-menu--catalog">
+          <a class="top-menu__link" href="catalog.html">Каталог товаров</a>
+        </li>
+        <li class="top-menu__item top-menu--knitting">
+          <a class="top-menu__link" href="#">Вязание на заказ</a>
+        </li>
+        <li class="top-menu__item top-menu--find">
+          <div class="top-menu__img-wrapper">
+            <div class="top-menu__svg">
+              <img src="img/icon-search.svg" alt="">
+            </div>
+          </div>
+          <a class="top-menu__link" href="#">Поиск по сайту</a>
+        </li>
+        <li class="top-menu__item top-menu--basket">
+          <div class="top-menu__img-wrapper">
+            <div class="top-menu__svg">
+              <img src="img/icon-cart.svg" alt="">
+            </div>
+          </div>
+          <a class="top-menu__link" href="#">Корзина: пока пуста</a>
+        </li>
+        <li class="top-menu__item top-menu--delivery">
+          <a class="top-menu__link" href="#">Бесплатная доставка по России</a>
+        </li>
+      </ul>
+    </nav>
+    <header class="main-header">
+      <h1 class="main-header__title">
+        <span class="main-header__title-span main-header--span-inline">Милые штуки</span>
+        <span class="main-header__title-span main-header--span-inline">ручной</span>
+        <span class="main-header__title-span">работы для дома</span>
+      </h1>
+      <ul class="main-header__list">
+        <li class="main-header__item"><a class="main-header__link" href="#">Предметы интерьера</a></li>
+        <li class="main-header__item"><a class="main-header__link" href="#">Детские игрушки</a></li>
+      </ul>
+    </header>
+    <section class="featured featured--top">
+      <h2 class="featured__title featured__title--size">Вязанные корзинки
+        <span class="featured__span featured__span--right">товар недели</span>
+      </h2>
+      <p class="featured__text featured__text--size">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах</p>
+      <table class="featured__table featured__table--size">
+        <tr class="featured__row">
+          <td class="featured__col">Цвет:</td>
+          <td class="featured__col">&#171;Тифани&#187;/серый</td>
+        </tr>
+        <tr class="featured__row">
+          <td class="featured__col">Диаметр:</td>
+          <td class="featured__col">25 см</td>
+        </tr>
+        <tr class="featured__row">
+          <td class="featured__col">Высота:</td>
+          <td class="featured__col">15 см</td>
+        </tr>
+      </table>
+      <img class="featured__basket-image" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязаные корзиночки">
+      <p class="featured__price featured__price--size">Цена: 990 руб.</p>
+      <a href="#" class="featured__to-order featured__to-order--size">Заказать</a>
+    </section>
+    <section class="about about--size about--bg">
+      <h2 class="about__title">Коротко о нас:</h2>
+      <ul class="about__list about__list--display">
+        <li class="about__item about__item--size about__item--eco">
+          <div class="about__svg"></div>
+          <a href="#" class="about__link about__link--size">Экологически<br>чистые материалы</a>
+        </li>
+        <li class="about__item about__item--size about__item--scandinavian">
+          <div class="about__svg"></div>
+          <a href="#" class="about__link about__link--size">Скандинавский стиль<br>по российской цене</a>
+        </li>
+        <li class="about__item about__item--size about__item--more-like">
+          <div class="about__svg"></div>
+          <a href="#" class="about__link about__link--size">Увеличивает лайки<br>на фотографиях</a>
+        </li>
+        <li class="about__item about__item--size about__item--handmade">
+          <div class="about__svg"></div>
+          <a href="#" class="about__link about__link--size">Связано вручную с<br>любовью и умилением</a>
+        </li>
+        <li class="about__item about__item--size about__item--local">
+          <div class="about__svg"></div>
+          <a href="#" class="about__link about__link--size">Поддержка отечественного<br>производителя</a>
+        </li>
+        <li class="about__item about__item--size about__item--present">
+          <div class="about__svg"></div>
+          <a href="#" class="about__link about__link--size">Поставляется в<br>подарочной упаковке</a>
+        </li>
+      </ul>
+      <article class="about-comments">
+        <h2 class="about__title about__title--size">Отзывы</h2>
+        <p class="about__text about__text--fz">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
+        <p class="about__name about__name--display">Анастасия Красильникова<br>
+          <span class="about__span">@misssssiskras</span>
+        </p>
+        <table class="about__table about__table--position">
+          <tr class="about__tr">
+            <td class="about__td about__td--brn">
+              <a href="#" class="about__prev-button"><img class="about__arrow" src="img/icon-left-arrow.svg" alt="Назад"></a>
+            </td>
+            <td class="about__td about__td--brn">
+              <a href="#" class="about__next-button"><img class="about__arrow" src="img/icon-right-arrow.svg" alt="Вперед"></a>
+            </td>
+          </tr>
+        </table>
+        <a href="add_message.php" class="about__to-write about__to-write--position">Написать</a>
+      </article>
+    </section>
+    <section class="contacts contacts--size">
+      <h3 class="contacts__title">Контакты
+        <span class="contacts__flag">
+          <img src="img/icon-flag.svg" alt="Флаг">
+        </span>
+      </h3>
+      <table class="contacts__table contacts__table--mt">
+        <tbody class="contacts__tbody">
+          <tr class="contacts__row">
+            <td class="contacts__col">
+              <p class="contacts__email">e-mail:</p>
+            </td>
+            <td class="contacts__col">
+              <p class="contacts__email-wrapper">
+                <a class="contacts__email-link" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
+              </p>
+            </td>
+          </tr>
+          <tr class="contacts__row contacts__row--size">
+            <td class="contacts__col">
+              <p class="contacts__address contacts__address--size">адрес:</p>
+            </td>
+            <td class="contacts__col">
+              <p class="contacts__email-wrapper contacts__email-wrapper--display">
+                <span>г. Санкт-Петербург,</span>
+                <span>ул. Большая Конюшеная,</span>
+                <span>д.19/8,офис 101</span>
+              </p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+    <div class="map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043705228!2d30.320889251994995!3d59.938794181787244!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1516865453287" width="100%" height="460" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+    <div class="write-us__wrapper write-us__wrapper--ta">
+      <a href="write_us_form.html" class="write-us write-us--size">Напишите нам</a>
+    </div>
+    <footer class="main-footer main-footer--size">
+      <ul class="main-footer__list main-footer__list--display">
+        <li class="main-footer__item main-footer__item--display">
+          <img src="img/logo-mobile.svg" alt="">
+        </li>
+        <li class="main-footer__item main-footer__item--social">
+          <a class="main-footer__item-link href="#">
+            <img src="img/icon-insta.svg" alt="Instagramm">
+          </a>
+          <a class="main-footer__item-link href="#">
+            <img src="img/icon-fb.svg" alt="Facebook">
+          </a>
+          <a class="main-footer__item-link href="#">
+            <img src="img/icon-twitter.svg" alt="Twitter">
+          </a>
+        </li>
+        <li class="main-footer__item">
+          <p class="main-footer__copyright">
+            <a href="#" class="main-footer__link"><span>Разработано</span>
+              <img class="main-footer__img" src="img/htmlacademy.svg" alt="Academy link" width="38" height="38">
+            </a>
+          </p>
+        </li>
+      </ul>
+    </footer>
+  </div>
+</body>
 </html>
