Сверстал catalog.html для планшета

--- a/source/index.html
+++ b/source/index.html
@@ -9,11 +9,11 @@
   <div class="site-wrapper">
     <nav class="top-menu">
       <ul class="top-menu__list">
-        <li class="top-menu__item top-menu--logo">
+        <li class="top-menu__item top-menu--order">
           <a class="top-menu__link">
             <img class="top-menu__logo-image" src="/img/logo-mobile.svg" width="86" height="35" alt="Лого">
           </a>
-          <button class="top-menu__toggle-menu">X</button>
+          <!-- <button class="top-menu__toggle-menu">X</button> -->
         </li>
         <li class="top-menu__item top-menu--catalog">
           <a class="top-menu__link" href="catalog.html">Каталог товаров</a>
@@ -22,30 +22,21 @@
           <a class="top-menu__link" href="#">Вязание на заказ</a>
         </li>
         <li class="top-menu__item top-menu--find">
-          <div class="top-menu__img-wrapper">
-            <div class="top-menu__svg">
-              <img src="img/icon-search.svg" alt="">
-            </div>
-          </div>
-          <a class="top-menu__link" href="#">Поиск по сайту</a>
+          <a class="top-menu__link" href="#">
+          <span class="">Поиск по сайту</span></a>
         </li>
         <li class="top-menu__item top-menu--basket">
-          <div class="top-menu__img-wrapper">
-            <div class="top-menu__svg">
-              <img src="img/icon-cart.svg" alt="">
-            </div>
-          </div>
           <a class="top-menu__link" href="#">Корзина: пока пуста</a>
         </li>
-        <li class="top-menu__item top-menu--delivery">
-          <a class="top-menu__link" href="#">Бесплатная доставка по России</a>
+        <li class="top-menu__item top-menu--display-block">
+          <a class="top-menu__link top-menu--font" href="#">Бесплатная доставка по России</a>
         </li>
       </ul>
     </nav>
     <header class="main-header">
       <h1 class="main-header__title">
-        <span class="main-header__title-span main-header--span-inline">Милые штуки</span>
-        <span class="main-header__title-span main-header--span-inline">ручной</span>
+        <span class="main-header__title-span main-header--display-block">Милые штуки</span>
+        <span class="main-header__title-span main-header--display-block">ручной</span>
         <span class="main-header__title-span">работы для дома</span>
       </h1>
       <ul class="main-header__list">
@@ -53,12 +44,12 @@
         <li class="main-header__item"><a class="main-header__link" href="#">Детские игрушки</a></li>
       </ul>
     </header>
-    <section class="featured featured--top">
-      <h2 class="featured__title featured__title--size">Вязанные корзинки
-        <span class="featured__span featured__span--right">товар недели</span>
+    <section class="featured">
+      <h2 class="featured__title">Вязанные корзинки
+        <span class="featured__span">товар недели</span>
       </h2>
-      <p class="featured__text featured__text--size">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах</p>
-      <table class="featured__table featured__table--size">
+      <p class="featured__text">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах</p>
+      <table class="featured__table">
         <tr class="featured__row">
           <td class="featured__col">Цвет:</td>
           <td class="featured__col">&#171;Тифани&#187;/серый</td>
@@ -73,54 +64,54 @@
         </tr>
       </table>
       <img class="featured__basket-image" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязаные корзиночки">
-      <p class="featured__price featured__price--size">Цена: 990 руб.</p>
-      <a href="#" class="featured__to-order featured__to-order--size">Заказать</a>
+      <p class="featured__price">Цена: 990 руб.</p>
+      <a href="#" class="featured__to-order">Заказать</a>
     </section>
-    <section class="about about--size about--bg">
+    <section class="about">
       <h2 class="about__title">Коротко о нас:</h2>
-      <ul class="about__list about__list--display">
-        <li class="about__item about__item--size about__item--eco">
+      <ul class="about__list">
+        <li class="about__item about__item--eco-order">
           <div class="about__svg"></div>
-          <a href="#" class="about__link about__link--size">Экологически<br>чистые материалы</a>
+          <a href="#" class="about__link">Экологически<br>чистые материалы</a>
         </li>
-        <li class="about__item about__item--size about__item--scandinavian">
+        <li class="about__item about__item--scandinavian-order">
           <div class="about__svg"></div>
-          <a href="#" class="about__link about__link--size">Скандинавский стиль<br>по российской цене</a>
+          <a href="#" class="about__link">Скандинавский стиль<br>по российской цене</a>
         </li>
-        <li class="about__item about__item--size about__item--more-like">
+        <li class="about__item about__item--more-like-order">
           <div class="about__svg"></div>
-          <a href="#" class="about__link about__link--size">Увеличивает лайки<br>на фотографиях</a>
+          <a href="#" class="about__link">Увеличивает лайки<br>на фотографиях</a>
         </li>
-        <li class="about__item about__item--size about__item--handmade">
+        <li class="about__item about__item--handmade-order">
           <div class="about__svg"></div>
-          <a href="#" class="about__link about__link--size">Связано вручную с<br>любовью и умилением</a>
+          <a href="#" class="about__link">Связано вручную с<br>любовью и умилением</a>
         </li>
-        <li class="about__item about__item--size about__item--local">
+        <li class="about__item about__item--local-order">
           <div class="about__svg"></div>
-          <a href="#" class="about__link about__link--size">Поддержка отечественного<br>производителя</a>
+          <a href="#" class="about__link">Поддержка отечественного<br>производителя</a>
         </li>
-        <li class="about__item about__item--size about__item--present">
+        <li class="about__item about__item--present-order">
           <div class="about__svg"></div>
-          <a href="#" class="about__link about__link--size">Поставляется в<br>подарочной упаковке</a>
+          <a href="#" class="about__link">Поставляется в<br>подарочной упаковке</a>
         </li>
       </ul>
       <article class="about-comments">
-        <h2 class="about__title about__title--size">Отзывы</h2>
-        <p class="about__text about__text--fz">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
-        <p class="about__name about__name--display">Анастасия Красильникова<br>
+        <h2 class="about__title">Отзывы</h2>
+        <p class="about__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
+        <p class="about__name">Анастасия Красильникова<br>
           <span class="about__span">@misssssiskras</span>
         </p>
-        <table class="about__table about__table--position">
+        <table class="about__table">
           <tr class="about__tr">
-            <td class="about__td about__td--brn">
+            <td class="about__td">
               <a href="#" class="about__prev-button"><img class="about__arrow" src="img/icon-left-arrow.svg" alt="Назад"></a>
             </td>
-            <td class="about__td about__td--brn">
+            <td class="about__td">
               <a href="#" class="about__next-button"><img class="about__arrow" src="img/icon-right-arrow.svg" alt="Вперед"></a>
             </td>
           </tr>
         </table>
-        <a href="add_message.php" class="about__to-write about__to-write--position">Написать</a>
+        <a href="add_message.php" class="about__to-write">Написать</a>
       </article>
     </section>
     <section class="contacts contacts--size">
@@ -162,12 +153,12 @@
     <div class="write-us__wrapper write-us__wrapper--ta">
       <a href="write_us_form.html" class="write-us write-us--size">Напишите нам</a>
     </div>
-    <footer class="main-footer main-footer--size">
-      <ul class="main-footer__list main-footer__list--display">
+    <footer class="main-footer">
+      <ul class="main-footer__list">
         <li class="main-footer__item main-footer__item--display">
           <img src="img/logo-mobile.svg" alt="">
         </li>
-        <li class="main-footer__item main-footer__item--social">
+        <li class="main-footer__item">
           <a class="main-footer__item-link href="#">
             <img src="img/icon-insta.svg" alt="Instagramm">
           </a>
