--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,23 +10,27 @@
   <div class="site-wrapper">
     <nav class="top-menu">
       <ul class="top-menu__list">
-        <li class="top-menu__item">
+        <li class="top-menu__item top-menu--order">
           <a class="top-menu__link">
-            <img class="top-menu__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Лого">
+            <img class="top-menu__logo-image" src="/img/logo-mobile.svg" width="86" height="35" alt="Лого">
           </a>
-          <button class="top-menu__toggle-menu">X</button>
+          <!-- <button class="top-menu__toggle-menu">X</button> -->
         </li>
-        <li class="top-menu__item">
+        <li class="top-menu__item top-menu--catalog">
           <a class="top-menu__link" href="catalog.html">Каталог товаров</a>
         </li>
-        <li class="top-menu__item">
+        <li class="top-menu__item top-menu--knitting">
           <a class="top-menu__link" href="#">Вязание на заказ</a>
         </li>
-        <li class="top-menu__item">
-          <a class="top-menu__link" href="#">Поиск по сайту</a>
+        <li class="top-menu__item top-menu--find">
+          <a class="top-menu__link" href="#">
+          <span class="">Поиск по сайту</span></a>
         </li>
-        <li class="top-menu__item">
+        <li class="top-menu__item top-menu--basket">
           <a class="top-menu__link" href="#">Корзина: пока пуста</a>
+        </li>
+        <li class="top-menu__item top-menu--display-block">
+          <a class="top-menu__link top-menu--font" href="#">Бесплатная доставка по России</a>
         </li>
       </ul>
     </nav>
@@ -35,7 +39,7 @@
     </header>
     <section class="catalog">
       <article class="catalog__item">
-        <img class="catalog__image" src="img/photo-hare-mobile@1x.jpg" width="260" height="195" alt="Картинка товара">
+        <div class="catalog__image catalog__image--hare catalog__image--m-hare"></div>
         <div class="catalog-wrapper">
           <h3 class="catalog__title">Зайчик-попрыгайчик</h3>
           <p class="catalog__description">Рост 30 см, вес 200 гр.</p>
@@ -43,7 +47,8 @@
         </div>
       </article>
       <article class="catalog__item">
-        <img class="catalog__image" src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Картинка товара">
+        <div class="catalog__image  catalog__item--basket"></div>
+        <!-- <img class="catalog__image" src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Картинка товара"> -->
           <div class="catalog-wrapper">
           <h3 class="catalog__title">Корзинка для белья</h3>
           <p class="catalog__description">Диаметр 15 см, высота 10 см</p>
@@ -51,7 +56,8 @@
         </div>
       </article>
       <article class="catalog__item">
-        <img class="catalog__image" src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Картинка товара">
+        <div class="catalog__image  catalog__item--big-basket"></div>
+        <!-- <img class="catalog__image" src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Картинка товара"> -->
         <div class="catalog-wrapper">
           <h3 class="catalog__title">Большая корзина<br>для игрушек</h3>
           <p class="catalog__description">Диаметр 30 см, высота 30 см</p>
@@ -62,12 +68,13 @@
         <div class="catalog__title-wrapper">
           <h3 class="catalog__title">Процесс производства</h3>
         </div>
-        <div class="catalog__movie">
-          <img class="catalog__image" src="img/video-mobile@1x.jpg" width="260" height="150" alt="Видео создания шедевров">
-          <img class="catalog__image-play" src="img/icon-play.svg" width="100" height="76" alt="Видео создания шедевров">
+        <div class="catalog__movie-wrapper">
+          <div class="catalog__movie--big-basket">
+            <img class="catalog__image-play" src="img/icon-play.svg" width="100" height="76" alt="Видео создания шедевров">
+          </div>
         </div>
         <div class="catalog__description-wrapper">
-          <p class="catalog__description">По просьбам наших<br>любимых фолловеров мы<br>сняли для вас подробное<br>видео о том, как появляются<br>наши товары</p>
+          <p class="catalog__description">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары</p>
         </div>
         <div class="catalog__to-order-wrapper">
           <a href="#" class="catalog__to-order">Сделать заказ</a>
@@ -76,6 +83,9 @@
     </section>
     <footer class="main-footer">
       <ul class="main-footer__list">
+        <li class="main-footer__item main-footer__item--display">
+          <img src="img/logo-mobile.svg" alt="">
+        </li>
         <li class="main-footer__item">
           <a class="main-footer__item-link href="#">
             <img src="img/icon-insta.svg" alt="Instagramm">
