--- a/source/form.html
+++ b/source/form.html
@@ -9,23 +9,27 @@
   <div class="site-wrapper">
     <nav class="top-menu">
       <ul class="top-menu__list">
-        <li class="top-menu__item">
+        <li class="top-menu__item top-menu--order">
           <a class="top-menu__link">
-            <img class="top-menu__logo-image" src="source/img/logo-mobile.svg" width="86" height="35" alt="Лого">
+            <img class="top-menu__logo-image" src="/img/logo-mobile.svg" width="86" height="35" alt="Лого">
           </a>
-          <button class="top-menu__toggle-menu">X</button>
+          <!-- <button class="top-menu__toggle-menu">X</button> -->
         </li>
-        <li class="top-menu__item">
+        <li class="top-menu__item top-menu--catalog">
           <a class="top-menu__link" href="catalog.html">Каталог товаров</a>
         </li>
-        <li class="top-menu__item">
+        <li class="top-menu__item top-menu--knitting">
           <a class="top-menu__link" href="#">Вязание на заказ</a>
         </li>
-        <li class="top-menu__item">
-          <a class="top-menu__link" href="#">Поиск по сайту</a>
+        <li class="top-menu__item top-menu--find">
+          <a class="top-menu__link" href="#">
+          <span class="">Поиск по сайту</span></a>
         </li>
-        <li class="top-menu__item">
+        <li class="top-menu__item top-menu--basket">
           <a class="top-menu__link" href="#">Корзина: пока пуста</a>
+        </li>
+        <li class="top-menu__item top-menu--display-block">
+          <a class="top-menu__link top-menu--font" href="#">Бесплатная доставка по России</a>
         </li>
       </ul>
     </nav>
@@ -37,98 +41,113 @@
       <p class="form__text">
         Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
       </p>
-      <form action="https://echo.htmlacademy.ru" method="get">
+      <form class="page__form" action="https://echo.htmlacademy.ru" method="get">
         <div class="form__type">
           <p class="form__type-item">Тип</p>
-          <label class="form__label" aria-label="Аксесуары для интерьера">
-            <input name="type" type="radio" value="accessories" checked="">
-            <span class="indicator"></span>
-            Аксесуары для интерьера
-          </label>
-          <label class="form__label" aria-label="Детская игрушка">
-            <input name="type" type="radio" value="toys">
-            <span class="indicator"></span>
-            Детская игрушка
-          </label>
+          <div class="form__label-wrapper">
+            <label class="form__label" aria-label="Аксесуары для интерьера">
+              <input name="type" type="radio" value="accessories" checked="">
+              <span class="indicator"></span>
+              Аксесуары для интерьера
+            </label>
+            <label class="form__label" aria-label="Детская игрушка">
+              <input name="type" type="radio" value="toys">
+              <span class="indicator"></span>
+              Детская игрушка
+            </label>
+          </div>
         </div>
         <div class="form__color">
           <p class="form__type-item">Цвет</p>
-          <label class="form__label" aria-label="Белый">
-            <input type="checkbox" name="color-white" value="white" checked>
-            <span class="indicator"></span>
-            Белый
-          </label>
-          <label class="form__label" aria-label="Серый">
-            <input type="checkbox" name="color-grey" value="grey" checked>
-            <span class="indicator"></span>
-            Серый
-          </label>
-          <label class="form__label" aria-label="Тиффани">
-            <input type="checkbox" name="color-tiffany" value="tiffany">
-            <span class="indicator"></span>
-            Тиффани
-          </label>
-          <label class="form__label" aria-label="Черный">
-            <input type="checkbox" name="color-black" value="black">
-            <span class="indicator"></span>
-            Черный
-          </label>
-          <label class="form__label" aria-label="Розовый">
-            <input type="checkbox" name="color-pink" value="pink">
-            <span class="indicator"></span>
-            Розовый
-          </label>
-          <label class="form__label" aria-label="Оранжевый">
-            <input type="checkbox" name="color-orange" value="orange">
-            <span class="indicator"></span>
-            Оранжевый
-          </label>
+          <div class="form__label-color-wrapper">
+            <label class="form__label" aria-label="Белый">
+              <input type="checkbox" name="color-white" value="white" checked>
+              <span class="indicator"></span>
+              Белый
+            </label>
+            <label class="form__label" aria-label="Серый">
+              <input type="checkbox" name="color-grey" value="grey" checked>
+              <span class="indicator"></span>
+              Серый
+            </label>
+            <label class="form__label" aria-label="Тиффани">
+              <input type="checkbox" name="color-tiffany" value="tiffany">
+              <span class="indicator"></span>
+              Тиффани
+            </label>
+            <label class="form__label" aria-label="Черный">
+              <input type="checkbox" name="color-black" value="black">
+              <span class="indicator"></span>
+              Черный
+            </label>
+            <label class="form__label" aria-label="Розовый">
+              <input type="checkbox" name="color-pink" value="pink">
+              <span class="indicator"></span>
+              Розовый
+            </label>
+            <label class="form__label" aria-label="Оранжевый">
+              <input type="checkbox" name="color-orange" value="orange">
+              <span class="indicator"></span>
+              Оранжевый
+            </label>
+        </div>
         </div>
         <div class="form__personal">
+          <div class="form__full-name">
           <p class="form__type-item">Фио</p>
-          <label class="form__label">Имя:
-            <input class="form__input" type="input" placeholder="Введите ваше имя*">
-          </label>
-          <label class="form__label">Фамилия:
-            <input class="form__input" type="input" placeholder="Укажите фамилию*">
-          </label>
-          <label class="form__label">Отчество:
-            <input class="form__input" type="input" placeholder="Отчество, если желаете">
-          </label>
-          <label class="form__label">
-            <p class="form__type-item">Тел</p>
-            <input class="form__input" type="tel" name="usrtel" placeholder="+7 XXX XX XX*">
-          </label>
-          <label class="form__label">
-            <p class="form__type-item">E-mail</p>
-            <input class="form__input" type="email" name="usremail" placeholder="Ваш E-mail*">
-          </label>
-          <label class="form__label">
+            <div class="form__label-personal-wrapper">
+              <label class="form__label">Имя:
+                <input class="form__input" type="input" placeholder="Введите ваше имя*">
+              </label>
+              <label class="form__label">Фамилия:
+                <input class="form__input" type="input" placeholder="Укажите фамилию*">
+              </label>
+              <label class="form__label">Отчество:
+                <input class="form__input" type="input" placeholder="Отчество, если желаете">
+              </label>
+            </div>
+        </div>
+          <div class="form__label-contact-wrapper">
+            <label class="form__label">
+              <p class="form__type-item">Тел</p>
+              <input class="form__input" type="tel" name="usrtel" placeholder="+7 XXX XX XX*">
+            </label>
+            <label class="form__label">
+              <p class="form__type-item">E-mail</p>
+              <input class="form__input" type="email" name="usremail" placeholder="Ваш E-mail*">
+            </label>
+          </div>
+          <label class="form__area">
             <p class="form__type-item">Доп</p>
-            <textarea class="form__textare" name="additionally" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+            <textarea class="form__textarea" name="additionally" placeholder="Опишите все ваши пожелания к заказу"></textarea>
           </label>
+        </div>
+        <div class="form__send">
+          <button class="form__button" type="submit">Отправить заказ</button>
           <p class="form__description">*Поля обязательные для заполнения</p>
         </div>
-        <button class="form__button" type="submit">Отправить заказ</button>
       </form>
     </section>
     <footer class="main-footer">
       <ul class="main-footer__list">
+        <li class="main-footer__item main-footer__item--display">
+          <img src="img/logo-mobile.svg" alt="">
+        </li>
         <li class="main-footer__item">
           <a class="main-footer__item-link href="#">
-            <img src="source/img/icon-insta.svg" alt="Instagramm">
+            <img src="img/icon-insta.svg" alt="Instagramm">
           </a>
           <a class="main-footer__item-link href="#">
-            <img src="source/img/icon-fb.svg" alt="Facebook">
+            <img src="img/icon-fb.svg" alt="Facebook">
           </a>
           <a class="main-footer__item-link href="#">
-            <img src="source/img/icon-twitter.svg" alt="Twitter">
+            <img src="img/icon-twitter.svg" alt="Twitter">
           </a>
         </li>
         <li class="main-footer__item">
           <p class="main-footer__copyright">
             <a href="#" class="main-footer__link"><span>Разработано</span>
-              <img class="main-footer__img" src="source/img/htmlacademy.svg" alt="Academy link" width="38" height="38">
+              <img class="main-footer__img" src="img/htmlacademy.svg" alt="Academy link" width="38" height="38">
             </a>
           </p>
         </li>
