--- a/source/catalog.html
+++ b/source/catalog.html
@@ -64,19 +64,14 @@
           <p class="catalog__price">1 500 руб.</p>
         </div>
       </article>
-      <article class="catalog__movie">
-        <div class="catalog__title-wrapper">
+      <article class="catalog__films">
+        <div class="catalog__movies">
+          <div class="catalog__movie-play"></div>
+        </div>
+        <div class="catalog__films-description">
+          <div class="catalog__film-camera-icon"></div>
           <h3 class="catalog__title">Процесс производства</h3>
-        </div>
-        <div class="catalog__movie-wrapper">
-          <div class="catalog__movie--big-basket">
-            <img class="catalog__image-play" src="img/icon-play.svg" width="100" height="76" alt="Видео создания шедевров">
-          </div>
-        </div>
-        <div class="catalog__description-wrapper">
-          <p class="catalog__description">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары</p>
-        </div>
-        <div class="catalog__to-order-wrapper">
+          <p class="catalog__text">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары</p>
           <a href="#" class="catalog__to-order">Сделать заказ</a>
         </div>
       </article>
