Исправил ошибки валидации

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -38,6 +38,7 @@
       <h2 class="catalog-header__title">Каталог товаров</h2>
     </header>
     <section class="catalog">
+      <h2 class="visually-hidden">Раздел каталога. Самое интересное происходит тут.</h2>
       <article class="catalog__item">
         <div class="catalog__image catalog__image--hare catalog__image--m-hare"></div>
         <div class="catalog-wrapper">
@@ -82,13 +83,13 @@
           <img src="img/logo-mobile.svg" alt="">
         </li>
         <li class="main-footer__item">
-          <a class="main-footer__item-link href="#">
+          <a class="main-footer__item-link" href="#">
             <img src="img/icon-insta.svg" alt="Instagramm">
           </a>
-          <a class="main-footer__item-link href="#">
+          <a class="main-footer__item-link" href="#">
             <img src="img/icon-fb.svg" alt="Facebook">
           </a>
-          <a class="main-footer__item-link href="#">
+          <a class="main-footer__item-link" href="#">
             <img src="img/icon-twitter.svg" alt="Twitter">
           </a>
         </li>
