--- a/source/form.html
+++ b/source/form.html
@@ -38,6 +38,7 @@
       <h2 class="form-header__title">Вязание на заказ</h2>
     </header>
     <section class="form">
+      <h2 class="visually-hidden">Раздел формы. Закажи клевый индивидуальный подарок люимым</h2>
       <p class="form__text">
         Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
       </p>
@@ -97,28 +98,28 @@
           <p class="form__type-item">Фио</p>
             <div class="form__label-personal-wrapper">
               <label class="form__label">Имя:
-                <input class="form__input" type="input" placeholder="Введите ваше имя*">
+                <input class="form__input" placeholder="Введите ваше имя*">
               </label>
               <label class="form__label">Фамилия:
-                <input class="form__input" type="input" placeholder="Укажите фамилию*">
+                <input class="form__input" placeholder="Укажите фамилию*">
               </label>
               <label class="form__label">Отчество:
-                <input class="form__input" type="input" placeholder="Отчество, если желаете">
+                <input class="form__input" placeholder="Отчество, если желаете">
               </label>
             </div>
         </div>
           <div class="form__label-contact-wrapper">
             <label class="form__label">
-              <p class="form__type-item">Тел</p>
+              <span class="form__type-item">Тел</span>
               <input class="form__input" type="tel" name="usrtel" placeholder="+7 XXX XX XX*">
             </label>
             <label class="form__label">
-              <p class="form__type-item">E-mail</p>
+              <span class="form__type-item">E-mail</span>
               <input class="form__input" type="email" name="usremail" placeholder="Ваш E-mail*">
             </label>
           </div>
           <label class="form__area">
-            <p class="form__type-item">Доп</p>
+            <span class="form__type-item">Доп</span>
             <textarea class="form__textarea" name="additionally" placeholder="Опишите все ваши пожелания к заказу"></textarea>
           </label>
         </div>
@@ -134,13 +135,13 @@
           <img src="img/logo-mobile.svg" alt="">
         </li>
         <li class="main-footer__item">
-          <a class="main-footer__item-link href="#">
+          <a class="main-footer__item-link" href="#">
             <img src="img/icon-insta.svg" alt="Instagramm">
           </a>
-          <a class="main-footer__item-link href="#">
+          <a class="main-footer__item-link" href="#">
             <img src="img/icon-fb.svg" alt="Facebook">
           </a>
-          <a class="main-footer__item-link href="#">
+          <a class="main-footer__item-link" href="#">
             <img src="img/icon-twitter.svg" alt="Twitter">
           </a>
         </li>
