--- a/source/index.html
+++ b/source/index.html
@@ -7,44 +7,40 @@
 </head>
 <body>
   <div class="site-wrapper">
-    <nav class="top-menu">
-      <ul class="top-menu__list">
-        <li class="top-menu__item top-menu--logo">
-          <a class="top-menu__link">
-            <img class="top-menu__logo-image" src="/img/logo-mobile.svg" width="86" height="35" alt="Лого">
-          </a>
-          <!-- <button class="top-menu__toggle-menu">X</button> -->
-        </li>
-        <li class="top-menu__item top-menu--catalog">
-          <a class="top-menu__link" href="catalog.html">Каталог товаров</a>
-        </li>
-        <li class="top-menu__item top-menu--knitting">
-          <a class="top-menu__link" href="#">Вязание на заказ</a>
-        </li>
-        <li class="top-menu__item top-menu--find">
-          <a class="top-menu__link" href="#">
-          <span class="">Поиск по сайту</span></a>
-        </li>
-        <li class="top-menu__item top-menu--basket">
-          <a class="top-menu__link" href="#">Корзина: пока пуста</a>
-        </li>
-        <li class="top-menu__item top-menu--display-block-m top-menu--delivery">
-          <a class="top-menu__link top-menu--font" href="#">Бесплатная доставка по России</a>
-        </li>
-        <li class="top-menu__item top-menu--news top-menu--display-block-l">
-          <a class="top-menu__link top-menu--font" href="#">Новые поступления</a>
-        </li>
-        <li class="top-menu__item top-menu--sale top-menu--display-block-l">
-          <a class="top-menu__link top-menu--font" href="#">Распродажа</a>
-        </li>
-      </ul>
-    </nav>
     <header class="main-header">
-      <h1 class="main-header__title">
-        <span class="main-header__title-span main-header--display-block">Милые штуки</span>
-        <span class="main-header__title-span main-header--display-block">ручной</span>
-        <span class="main-header__title-span">работы для дома</span>
-      </h1>
+      <nav class="top-menu">
+        <ul class="top-menu__list">
+          <li class="top-menu__item logo--order">
+            <a class="top-menu__link">
+              <img class="top-menu__logo-image" src="/img/logo-mobile.svg" width="86" height="35" alt="Лого">
+            </a>
+            <!-- <button class="top-menu__toggle-menu">X</button> -->
+          </li>
+          <li class="top-menu__item catalog--order">
+            <a class="top-menu__link" href="catalog.html">Каталог товаров</a>
+          </li>
+          <li class="top-menu__item knitting--order">
+            <a class="top-menu__link" href="#">Вязание на заказ</a>
+          </li>
+          <li class="top-menu__item find--order">
+            <a class="top-menu__link" href="#">
+            <span class="">Поиск по сайту</span></a>
+          </li>
+          <li class="top-menu__item basket--order">
+            <a class="top-menu__link" href="#">Корзина: пока пуста</a>
+          </li>
+          <li class="top-menu__item delivery--order display--block-m">
+            <a class="top-menu__link top-menu--font" href="#">Бесплатная доставка по России</a>
+          </li>
+          <li class="top-menu__item  news--order display--block-l">
+            <a class="top-menu__link top-menu--font" href="#">Новые поступления</a>
+          </li>
+          <li class="top-menu__item  sale--order display--block-l">
+            <a class="top-menu__link top-menu--font" href="#">Распродажа</a>
+          </li>
+        </ul>
+      </nav>
+      <h1 class="main-header__title">Милые штуки ручной работы для дома</h1>
       <ul class="main-header__list">
         <li class="main-header__item"><a class="main-header__link" href="#">Предметы интерьера</a></li>
         <li class="main-header__item"><a class="main-header__link" href="#">Детские игрушки</a></li>
@@ -156,7 +152,7 @@
       </table>
     </section>
     <div class="map">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043705228!2d30.320889251994995!3d59.938794181787244!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1516865453287" width="100%" height="460" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <iframe class="map__iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043705228!2d30.320889251994995!3d59.938794181787244!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1516865453287" allowfullscreen></iframe>
     </div>
     <div class="write-us__wrapper write-us__wrapper--ta">
       <a href="write_us_form.html" class="write-us write-us--size">Напишите нам</a>
@@ -167,13 +163,13 @@
           <img src="img/logo-mobile.svg" alt="">
         </li>
         <li class="main-footer__item">
-          <a class="main-footer__item-link href="#">
+          <a class="main-footer__item-link" href="#">
             <img src="img/icon-insta.svg" alt="Instagramm">
           </a>
-          <a class="main-footer__item-link href="#">
+          <a class="main-footer__item-link" href="#">
             <img src="img/icon-fb.svg" alt="Facebook">
           </a>
-          <a class="main-footer__item-link href="#">
+          <a class="main-footer__item-link" href="#">
             <img src="img/icon-twitter.svg" alt="Twitter">
           </a>
         </li>
