Исправил ошибки верстки

--- a/source/form.html
+++ b/source/form.html
@@ -7,33 +7,39 @@
 </head>
 <body>
   <div class="site-wrapper">
-    <nav class="top-menu">
-      <ul class="top-menu__list">
-        <li class="top-menu__item top-menu--order">
-          <a class="top-menu__link">
-            <img class="top-menu__logo-image" src="/img/logo-mobile.svg" width="86" height="35" alt="Лого">
-          </a>
-          <!-- <button class="top-menu__toggle-menu">X</button> -->
-        </li>
-        <li class="top-menu__item top-menu--catalog">
-          <a class="top-menu__link" href="catalog.html">Каталог товаров</a>
-        </li>
-        <li class="top-menu__item top-menu--knitting">
-          <a class="top-menu__link" href="#">Вязание на заказ</a>
-        </li>
-        <li class="top-menu__item top-menu--find">
-          <a class="top-menu__link" href="#">
-          <span class="">Поиск по сайту</span></a>
-        </li>
-        <li class="top-menu__item top-menu--basket">
-          <a class="top-menu__link" href="#">Корзина: пока пуста</a>
-        </li>
-        <li class="top-menu__item top-menu--display-block">
-          <a class="top-menu__link top-menu--font" href="#">Бесплатная доставка по России</a>
-        </li>
-      </ul>
-    </nav>
     <header class="form-header">
+      <nav class="top-menu">
+        <ul class="top-menu__list">
+          <li class="top-menu__item logo--order">
+            <a class="top-menu__link" href="index.html">
+              <img class="top-menu__logo-image" src="/img/logo-mobile.svg" width="86" height="35" alt="Лого">
+            </a>
+            <!-- <button class="top-menu__toggle-menu">X</button> -->
+          </li>
+          <li class="top-menu__item catalog--order">
+            <a class="top-menu__link" href="catalog.html">Каталог товаров</a>
+          </li>
+          <li class="top-menu__item knitting--order">
+            <a class="top-menu__link" href="#">Вязание на заказ</a>
+          </li>
+          <li class="top-menu__item find--order">
+            <a class="top-menu__link" href="#">
+            <span class="">Поиск по сайту</span></a>
+          </li>
+          <li class="top-menu__item basket--order">
+            <a class="top-menu__link" href="#">Корзина: пока пуста</a>
+          </li>
+          <li class="top-menu__item delivery--order display--block-m">
+            <a class="top-menu__link top-menu--font" href="#">Бесплатная доставка по России</a>
+          </li>
+          <li class="top-menu__item  news--order display--block-l">
+            <a class="top-menu__link top-menu--font" href="#">Новые поступления</a>
+          </li>
+          <li class="top-menu__item  sale--order display--block-l">
+            <a class="top-menu__link top-menu--font" href="#">Распродажа</a>
+          </li>
+        </ul>
+      </nav>
       <h1 class="visually-hidden">Форма заказа</h1>
       <h2 class="form-header__title">Вязание на заказ</h2>
     </header>
