--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,39 +8,45 @@
 </head>
 <body>
   <div class="site-wrapper">
-    <nav class="top-menu">
-      <ul class="top-menu__list">
-        <li class="top-menu__item top-menu--order">
-          <a class="top-menu__link">
-            <img class="top-menu__logo-image" src="/img/logo-mobile.svg" width="86" height="35" alt="Лого">
-          </a>
-          <!-- <button class="top-menu__toggle-menu">X</button> -->
-        </li>
-        <li class="top-menu__item top-menu--catalog">
-          <a class="top-menu__link" href="catalog.html">Каталог товаров</a>
-        </li>
-        <li class="top-menu__item top-menu--knitting">
-          <a class="top-menu__link" href="#">Вязание на заказ</a>
-        </li>
-        <li class="top-menu__item top-menu--find">
-          <a class="top-menu__link" href="#">
-          <span class="">Поиск по сайту</span></a>
-        </li>
-        <li class="top-menu__item top-menu--basket">
-          <a class="top-menu__link" href="#">Корзина: пока пуста</a>
-        </li>
-        <li class="top-menu__item top-menu--display-block">
-          <a class="top-menu__link top-menu--font" href="#">Бесплатная доставка по России</a>
-        </li>
-      </ul>
-    </nav>
     <header class="catalog-header">
+      <nav class="top-menu">
+        <ul class="top-menu__list">
+          <li class="top-menu__item logo--order">
+            <a class="top-menu__link" href="index.html">
+              <img class="top-menu__logo-image" src="/img/logo-mobile.svg" width="86" height="35" alt="Лого">
+            </a>
+            <!-- <button class="top-menu__toggle-menu">X</button> -->
+          </li>
+          <li class="top-menu__item catalog--order">
+            <a class="top-menu__link" href="catalog.html">Каталог товаров</a>
+          </li>
+          <li class="top-menu__item knitting--order">
+            <a class="top-menu__link" href="#">Вязание на заказ</a>
+          </li>
+          <li class="top-menu__item find--order">
+            <a class="top-menu__link" href="#">
+            <span class="">Поиск по сайту</span></a>
+          </li>
+          <li class="top-menu__item basket--order">
+            <a class="top-menu__link" href="#">Корзина: пока пуста</a>
+          </li>
+          <li class="top-menu__item delivery--order display--block-m">
+            <a class="top-menu__link top-menu--font" href="#">Бесплатная доставка по России</a>
+          </li>
+          <li class="top-menu__item  news--order display--block-l">
+            <a class="top-menu__link top-menu--font" href="#">Новые поступления</a>
+          </li>
+          <li class="top-menu__item  sale--order display--block-l">
+            <a class="top-menu__link top-menu--font" href="#">Распродажа</a>
+          </li>
+        </ul>
+      </nav>
       <h2 class="catalog-header__title">Каталог товаров</h2>
     </header>
     <section class="catalog">
       <h2 class="visually-hidden">Раздел каталога. Самое интересное происходит тут.</h2>
       <article class="catalog__item">
-        <div class="catalog__image catalog__image--hare catalog__image--m-hare"></div>
+        <div class="catalog__image catalog__image--hare"></div>
         <div class="catalog-wrapper">
           <h3 class="catalog__title">Зайчик-попрыгайчик</h3>
           <p class="catalog__description">Рост 30 см, вес 200 гр.</p>
@@ -57,7 +63,7 @@
         </div>
       </article>
       <article class="catalog__item">
-        <div class="catalog__image  catalog__item--big-basket"></div>
+        <div class="catalog__image big--basket"></div>
         <!-- <img class="catalog__image" src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Картинка товара"> -->
         <div class="catalog-wrapper">
           <h3 class="catalog__title">Большая корзина<br>для игрушек</h3>
