--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="site-wrapper">
-    <header class="main-header">
+    <header class="main-header header--background">
       <nav class="top-menu">
         <ul class="top-menu__list">
           <li class="top-menu__item logo--order">
