Переделал структуру по правильному БЭМ, как мне кажется

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,32 +11,32 @@
     <header class="catalog-header">
       <nav class="top-menu">
         <ul class="top-menu__list">
-          <li class="top-menu__item logo--order">
+          <li class="top-menu__item top-menu__logo top-menu__logo--order">
             <a class="top-menu__link" href="index.html">
               <img class="top-menu__logo-image" src="/img/logo-mobile.svg" width="86" height="35" alt="Лого">
             </a>
-            <!-- <button class="top-menu__toggle-menu">X</button> -->
+            <button class="top-menu__toggle-menu">X</button>
           </li>
-          <li class="top-menu__item catalog--order">
+          <li class="top-menu__item top-menu__catalog top-menu__catalog--order">
             <a class="top-menu__link" href="catalog.html">Каталог товаров</a>
           </li>
-          <li class="top-menu__item knitting--order">
+          <li class="top-menu__item top-menu__knitting top-menu__knitting--order">
             <a class="top-menu__link" href="#">Вязание на заказ</a>
           </li>
-          <li class="top-menu__item find--order">
+          <li class="top-menu__item top-menu__find top-menu__find--order">
             <a class="top-menu__link" href="#">
             <span class="">Поиск по сайту</span></a>
           </li>
-          <li class="top-menu__item basket--order">
+          <li class="top-menu__item top-menu__basket top-menu__basket--order">
             <a class="top-menu__link" href="#">Корзина: пока пуста</a>
           </li>
-          <li class="top-menu__item delivery--order display--block-m">
+          <li class="top-menu__item top-menu__delivery top-menu__delivery--order top-menu__delivery--display-block">
             <a class="top-menu__link top-menu--font" href="#">Бесплатная доставка по России</a>
           </li>
-          <li class="top-menu__item  news--order display--block-l">
+          <li class="top-menu__item  top-menu__news top-menu__news--order top-menu__news--display-block">
             <a class="top-menu__link top-menu--font" href="#">Новые поступления</a>
           </li>
-          <li class="top-menu__item  sale--order display--block-l">
+          <li class="top-menu__item top-menu__sale top-menu__sale--order top-menu__sale--display-block">
             <a class="top-menu__link top-menu--font" href="#">Распродажа</a>
           </li>
         </ul>
@@ -46,7 +46,7 @@
     <section class="catalog">
       <h2 class="visually-hidden">Раздел каталога. Самое интересное происходит тут.</h2>
       <article class="catalog__item">
-        <div class="catalog__image catalog__image--hare"></div>
+        <div class="catalog__image catalog__hare"></div>
         <div class="catalog-wrapper">
           <h3 class="catalog__title">Зайчик-попрыгайчик</h3>
           <p class="catalog__description">Рост 30 см, вес 200 гр.</p>
@@ -54,7 +54,7 @@
         </div>
       </article>
       <article class="catalog__item">
-        <div class="catalog__image  catalog__item--basket"></div>
+        <div class="catalog__image catalog__basket"></div>
         <!-- <img class="catalog__image" src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Картинка товара"> -->
           <div class="catalog-wrapper">
           <h3 class="catalog__title">Корзинка для белья</h3>
@@ -63,7 +63,7 @@
         </div>
       </article>
       <article class="catalog__item">
-        <div class="catalog__image big--basket"></div>
+        <div class="catalog__image catalog__big-basket"></div>
         <!-- <img class="catalog__image" src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Картинка товара"> -->
         <div class="catalog-wrapper">
           <h3 class="catalog__title">Большая корзина<br>для игрушек</h3>
@@ -85,17 +85,17 @@
     </section>
     <footer class="main-footer">
       <ul class="main-footer__list">
-        <li class="main-footer__item main-footer__item--display">
+        <li class="main-footer__item main-footer__logo main-footer__logo--display">
           <img src="img/logo-mobile.svg" alt="">
         </li>
         <li class="main-footer__item">
-          <a class="main-footer__item-link" href="#">
+          <a class="main-footer__link" href="#">
             <img src="img/icon-insta.svg" alt="Instagramm">
           </a>
-          <a class="main-footer__item-link" href="#">
+          <a class="main-footer__link" href="#">
             <img src="img/icon-fb.svg" alt="Facebook">
           </a>
-          <a class="main-footer__item-link" href="#">
+          <a class="main-footer__link" href="#">
             <img src="img/icon-twitter.svg" alt="Twitter">
           </a>
         </li>
