Переделал структуру избавился от неудачных селекторов

--- a/source/form.html
+++ b/source/form.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <h1 class="visually-hidden">Страница формы заказа</h1>
   <div class="site-wrapper">
     <header class="form-header">
       <nav class="top-menu">
@@ -40,9 +41,8 @@
           </li>
         </ul>
       </nav>
-      <h1 class="visually-hidden">Форма заказа</h1>
-      <h2 class="form-header__title">Вязание на заказ</h2>
     </header>
+    <h2 class="form-title">Вязание на заказ</h2>
     <section class="form">
       <h2 class="visually-hidden">Раздел формы. Закажи клевый индивидуальный подарок люимым</h2>
       <p class="form__text">
@@ -97,7 +97,7 @@
               <span class="indicator"></span>
               Оранжевый
             </label>
-        </div>
+          </div>
         </div>
         <div class="form__personal">
           <div class="form__full-name">
