--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,7 +12,7 @@
       <nav class="top-menu">
         <ul class="top-menu__list">
           <li class="top-menu__item top-menu__logo top-menu__logo--order">
-            <a class="top-menu__link" href="index.html">
+            <a class="top-menu__link" href="№">
               <img class="top-menu__logo-image" src="/img/logo-mobile.svg" width="86" height="35" alt="Лого">
             </a>
             <button class="top-menu__toggle-menu">X</button>
@@ -41,8 +41,8 @@
           </li>
         </ul>
       </nav>
-      <h2 class="catalog-header__title">Каталог товаров</h2>
     </header>
+    <h2 class="catalog-title">Каталог товаров</h2>
     <section class="catalog">
       <h2 class="visually-hidden">Раздел каталога. Самое интересное происходит тут.</h2>
       <article class="catalog__item">
