--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="site-wrapper">
-    <header class="main-header header--background">
+    <header class="main-header">
       <nav class="top-menu">
         <ul class="top-menu__list">
           <li class="top-menu__item top-menu__logo top-menu__logo--order">
@@ -40,12 +40,18 @@
           </li>
         </ul>
       </nav>
-      <h1 class="main-header__title">Милые штуки ручной работы для дома</h1>
-      <ul class="main-header__list">
-        <li class="main-header__item"><a class="main-header__link" href="#">Предметы интерьера</a></li>
-        <li class="main-header__item"><a class="main-header__link" href="#">Детские игрушки</a></li>
-      </ul>
     </header>
+    <h1 class="site-title">
+      <span class="site-title__text">Милые штуки ручной работы для дома</span>
+    </h1>
+    <ul class="site-choice">
+      <li class="site-choice__item site-choice__interior">
+        <a class="site-choice__link" href="#">Предметы интерьера</a>
+      </li>
+      <li class="site-choice__item site-choice__toys">
+        <a class="site-choice__link" href="#">Детские игрушки</a>
+      </li>
+    </ul>
     <section class="featured">
       <h2 class="featured__title">
         <span class="featured__span-block">Вязанные корзинки</span>
