Исправил мелкие огрехи

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,7 +12,7 @@
       <nav class="top-menu">
         <ul class="top-menu__list">
           <li class="top-menu__item top-menu__logo top-menu__logo--order">
-            <a class="top-menu__link" href="№">
+            <a class="top-menu__link" href="index.html">
               <img class="top-menu__logo-image" src="/img/logo-mobile.svg" width="86" height="35" alt="Лого">
             </a>
             <button class="top-menu__toggle-menu">X</button>
