промежуточное состояние для консультации

--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="site-wrapper">
     <header class="main-header">
-      <nav class="top-menu top-menu--opened">
+      <nav class="top-menu top-menu--closed">
         <button class="top-menu__toggle-menu"></button>
         <ul class="top-menu__list">
           <li class="top-menu__item top-menu__item--active top-menu__logo top-menu__logo--order">
