Завершил работу по 5 модулю

--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="site-wrapper">
     <header class="main-header">
-      <nav class="menu menu--opened">
+      <nav class="menu menu--closed">
         <button class="menu__toggle-menu"></button>
         <ul class="menu__list">
           <li class="menu__item menu__item--active menu__item--logo">
