--- a/source/catalog.html
+++ b/source/catalog.html
@@ -70,10 +70,10 @@
     <h2 class="catalog-title">Каталог товаров</h2>
     <section class="catalog">
       <h2 class="visually-hidden">Раздел каталога. Самое интересное происходит тут.</h2>
-      <article class="catalog__item">
+      <article class="catalog__item catalog__item--hare">
         <div class="catalog__image catalog__hare"></div>
         <div class="catalog-wrapper">
-          <h3 class="catalog__title">Зайчик-попрыгайчик</h3>
+          <h3 class="catalog__title catalog__title--width">Зайчик-попрыгайчик</h3>
           <p class="catalog__description">Рост 30 см, вес 200 гр.</p>
           <div class="catalog__price-wrapper">
             <p class="catalog__price">1 200 руб.</p>
@@ -87,7 +87,7 @@
         <div class="catalog__image catalog__basket"></div>
         <!-- <img class="catalog__image" src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Картинка товара"> -->
           <div class="catalog-wrapper">
-          <h3 class="catalog__title">Корзинка для белья</h3>
+          <h3 class="catalog__title catalog__title--width">Корзинка для белья</h3>
           <p class="catalog__description">Диаметр 15 см, высота 10 см</p>
           <div class="catalog__price-wrapper">
             <p class="catalog__price">690 руб.</p>
@@ -101,7 +101,7 @@
         <div class="catalog__image catalog__big-basket"></div>
         <!-- <img class="catalog__image" src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Картинка товара"> -->
         <div class="catalog-wrapper">
-          <h3 class="catalog__title">Большая корзина<br>для игрушек</h3>
+          <h3 class="catalog__title catalog__title--width">Большая корзина<br>для игрушек</h3>
           <p class="catalog__description">Диаметр 30 см, высота 30 см</p>
           <div class="catalog__price-wrapper catalog__price-wrapper--margin">
             <p class="catalog__price">1 500 руб.</p>
@@ -121,7 +121,7 @@
   <path d="M26-177l6-4v16l-6-4V-177z M24-177v8c0,2.209-1.791,4-4,4H4c-2.209,0-4-1.791-4-4v-8c0-2.209,1.791-4,4-4h10 c0-1.105,0.895-2,2-2v-2H5c-0.553,0-1-0.447-1-1s0.447-1,1-1h12c0.553,0,1,0.447,1,1v3c1.105,0,2,0.895,2,2 C22.209-181,24-179.209,24-177z M12-177H4v8h8V-177z M20-176c0-0.553-0.447-1-1-1h-4c-0.553,0-1,0.447-1,1s0.447,1,1,1h4 C19.553-175,20-175.447,20-176z"/>
 </g>
 </svg>
-          <h3 class="catalog__title">Процесс производства</h3>
+          <h3 class="catalog__title catalog__title--width">Процесс производства</h3>
         </div>
         <p class="catalog__text">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары</p>
         <a href="#" class="catalog__to-order">Сделать заказ</a>
