Полностью переписал header

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <div class="site-wrapper">
-    <header class="main-header">
+    <header class="header">
       <nav class="menu menu--closed">
-        <button class="menu__toggle-menu"></button>
+        <!-- <button class="menu__toggle"></button> -->
         <ul class="menu__list">
           <li class="menu__item menu__item--active menu__item--logo">
-            <a class="menu__link menu__link--padding" href="index.html">
+            <a class="menu__link menu__link--logo">
               <svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="85.589px" height="35.034px" viewBox="32.458 20.216 85.589 35.034" enable-background="new 32.458 20.216 85.589 35.034" xml:space="preserve">
   <g>
     <path d="M36.638,46.517c-0.014-3.472-0.262-6.938-0.356-10.409c-0.008-0.34-0.015-0.681-0.02-1.021 c0.049,0.122,0.097,0.243,0.146,0.364c0.54,1.352,1.103,2.663,1.839,3.92c0.731,1.244,1.099,2.58,1.521,3.939 c-0.159,0.182-0.256,0.39-0.196,0.596c-0.033,0.15,0.059,0.245,0.212,0.306c0.537,0.46,1.55,0.231,2.113-0.008 c0.242-0.102,0.474-0.221,0.696-0.355c0.29-0.181,0.744-0.572,0.613-0.977c-0.024-0.079-0.049-0.157-0.072-0.235 c0.396-1.068,0.598-2.179,0.813-3.308c0.23-1.206,0.659-2.345,1.092-3.485c0.043,0.521,0.088,1.044,0.129,1.56 c0.174,2.147,0.028,4.27,0.008,6.422c-0.008,0.713,0.046,1.375,0.184,2.075c0.059,0.287,0.31,1.521,0.235,1.58 c-0.516,0.476-0.366,1.061,0.326,1.211c0.771,0.169,1.753-0.088,2.333-0.625c1.009-0.934,0.531-2.396,0.304-3.572 c-0.385-1.973,0.077-4.181,0.017-6.189c-0.069-2.26-0.43-4.503-0.399-6.769c0.023-1.831,0.328-3.714-0.303-5.471 c0.039-0.2,0.08-0.398,0.117-0.6c0.163-0.879-2.754-0.414-3.212,0.392c-0.29,0.235-0.438,0.519-0.313,0.806 c0.031,0.071,0.057,0.146,0.084,0.219c-0.552,2.699-1.321,5.313-2.207,7.93c-0.339,1.001-0.748,1.977-1.095,2.978 c-0.49-0.933-0.986-1.851-1.384-2.847c-1.155-2.891-2.199-5.813-3.61-8.596c0.16-1.289-2.698-1.153-3.261,0.02 c-0.682,1.426-0.592,2.866-0.369,4.393c0.254,1.721,0.298,3.411,0.32,5.147c0.039,3.347,0.3,6.689,0.351,10.04 c-0.298,0.331-0.389,0.741-0.078,1.158c0.136,0.182,0.306,0.321,0.482,0.46C34.454,48.198,36.643,47.679,36.638,46.517z"/>
@@ -26,43 +26,37 @@
     <path d="M112.736,53.505c-1.558-0.585-3.283-0.615-4.851-0.787c-1.603-0.17-3.245-0.41-4.884-0.562 c-1.637,0.053-3.31,0.027-4.972,0.129l-4.88,0.268c-6.487,0.289-12.999,0.253-19.517,0.107c-6.517-0.123-13.045-0.477-19.63-0.453 c-3.288,0.008-6.565,0.099-9.862,0.25c-1.632,0.283-3.239,0.501-4.904,0.913c-1.615,0.399-3.145,0.907-4.794,1.048 c1.623,0.362,3.341,0.292,4.962,0.297c1.579,0.01,3.243,0.143,4.872,0.231c3.229-0.172,6.487-0.246,9.733-0.25 c6.487-0.024,13.015,0.329,19.565,0.451c6.548,0.146,13.114,0.186,19.683-0.11l4.907-0.269c1.603-0.071,3.198-0.127,4.829-0.067 c1.628-0.148,3.253-0.33,4.918-0.532c1.664-0.238,3.22-0.627,4.854-0.509l0.074,0.006l0.006-0.055 c0.021-0.178-0.04-0.323-0.04-0.479C112.772,53.251,112.767,53.388,112.736,53.505z"/>
   </g>
 </svg>
-              <!-- <img class="menu__logo-image" src="/img/logo-mobile.svg" width="86" height="35" alt="Лого"> -->
             </a>
           </li>
           <li class="menu__item menu__item--catalog">
-            <a class="menu__link menu__link--font" href="catalog.html">Каталог товаров</a>
+            <a class="menu__link menu__link--catalog" href="catalog.html">Каталог товаров</a>
           </li>
           <li class="menu__item menu__item--knitting">
-            <a class="menu__link menu__link--font" href="#">Вязание на заказ</a>
+            <a class="menu__link menu__link--knitting" href="#">Вязание на заказ</a>
           </li>
           <li class="menu__item menu__item--find">
-            <a class="menu__link menu__link-svg" href="#">
-              <span class="menu__svg">
-                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17.6px" height="17.6px" viewBox="-0.8 -0.8 17.6 17.6" enable-background="new -0.8 -0.8 17.6 17.6" xml:space="preserve">
+            <a class="menu__link menu__link--find" href="#">
+              <svg class="menu__svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17.6px" height="17.6px" viewBox="-0.8 -0.8 17.6 17.6" enable-background="new -0.8 -0.8 17.6 17.6" xml:space="preserve">
   <path fill="#231F20" d="M16.47,14.93l-3.415-3.415C14.02,10.226,14.6,8.634,14.6,6.899c0-4.253-3.447-7.699-7.7-7.699 S-0.8,2.646-0.8,6.899s3.446,7.7,7.699,7.7c1.734,0,3.326-0.58,4.613-1.546l3.417,3.416c0.203,0.202,0.418,0.33,0.771,0.33 c0.607,0,1.1-0.492,1.1-1.1C16.8,15.459,16.739,15.2,16.47,14.93z M1.399,6.899c0-3.038,2.462-5.5,5.5-5.5s5.5,2.462,5.5,5.5 s-2.462,5.5-5.5,5.5S1.399,9.938,1.399,6.899z"/>
   </svg>
-              </span>
               <span class="menu__text-find menu--display-none">Поиск по сайту</span>
-            </a>
-          </li>
+            </a>          </li>
           <li class="menu__item menu__item--basket">
-            <a class="menu__link menu__link-svg" href="#">
-              <span class="menu__svg">
-                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20.294px" height="18.849px" viewBox="264.205 370.961 20.294 18.849" enable-background="new 264.205 370.961 20.294 18.849" xml:space="preserve">
+            <a class="menu__link menu__link--basket" href="#">
+                <svg class="menu__svg menu__svg--basket" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20.294px" height="18.849px" viewBox="264.205 370.961 20.294 18.849" enable-background="new 264.205 370.961 20.294 18.849" xml:space="preserve">
   <path fill="#231F20" d="M283.75,378.19h-3.151l-3.407-6.814c-0.185-0.37-0.634-0.52-1.006-0.335 c-0.371,0.186-0.521,0.636-0.335,1.006l3.071,6.143h-9.138l3.072-6.143c0.185-0.371,0.035-0.821-0.335-1.006 c-0.37-0.185-0.821-0.035-1.006,0.335l-3.407,6.814h-3.151c-0.414,0-0.75,0.336-0.75,0.75s0.336,0.75,0.75,0.75h0.157l0.855,2.991 c-0.187,0.137-0.316,0.347-0.316,0.595c0,0.396,0.309,0.71,0.697,0.739l1.656,5.795h12.697l1.656-5.795 c0.388-0.028,0.698-0.344,0.698-0.739c0-0.249-0.129-0.459-0.316-0.596l0.854-2.991h0.157c0.414,0,0.75-0.336,0.75-0.75 S284.164,378.19,283.75,378.19z M279.569,388.311h-10.433l-1.224-4.284h12.881L279.569,388.311z M281.222,382.526h-13.739 l-0.81-2.836h15.359L281.222,382.526z"/>
 </svg>
-              </span>
               <span class="menu__text-basket">Корзина: пока пуста</span>
             </a>
           </li>
           <li class="menu__item menu__item--delivery">
-            <a class="menu__link menu__link--font" href="#">Бесплатная доставка по России</a>
+            <a class="menu__link menu__link--delivery" href="#">Бесплатная доставка по России</a>
           </li>
           <li class="menu__item menu__item--news">
-            <a class="menu__link menu__link--font" href="#">Новые поступления</a>
+            <a class="menu__link menu__link--news" href="#">Новые поступления</a>
           </li>
           <li class="menu__item menu__item--sale">
-            <a class="menu__link menu__link--font" href="#">Распродажа</a>
+            <a class="menu__link menu__link--sale" href="#">Распродажа</a>
           </li>
         </ul>
       </nav>
